RTL plugin alignment issue in pdf

--- a/assets/css/rtl-pdf.css
+++ b/assets/css/rtl-pdf.css
@@ -18,6 +18,7 @@ body
     unicode-bidi: embed;
     display: block;
     width: 100%;
+    text-align: right;
 }
 
 .signed_on 
